<resources>
    <string name="app_name">Patient Dashboard</string>
    <string name="title_section1">Nurse</string>
    <string name="title_section2">OT/SLP</string>
    <string name="title_section3">PT</string>
    <string name="title_section4">Physician</string>
    <string name="patient_new">New patient</string>
    <string name="patient_list">Select patient</string>
    <string name="patient_save">Save</string>
    <string name="patient_clear">Clear</string>
    <string name="data_save">Save current day</string>
    <string name="action_export_csv">Export to CSV</string>
    <string name="action_discharge">Discharge current patient</string>
    <string name="action_update_patient">Update current patient</string>
    <string name="action_score_report">View score report</string>
    <string name="action_score_graphs">View score graphs</string>
    <string name="action_settings">Settings</string>
    <string name="clear">Delete patient</string>
    <string name="clear_all">Delete all patients</string>
    <string name="dayNumber">Day 1</string>
    <string name="title_activity_new_patient_form">New patient details</string>
    <string name="select_admission_date">Select date of admission</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="patient_ID">MRN number</string>
    <string name="patient_age">Patient age</string>
    <string name="patient_gender">Patient gender</string>
    <string name="first_language">First language</string>
    <string name="stroke_type">Stroke type</string>
    <string name="first_stroke">Is this a first stroke?</string>
    <string name="lesion_side">Side of lesion</string>
    <string name="hemiplegia_side">Side of hemiplegia</string>
    <string name="consciousness">Level of consciousness</string>
    <string name="orientation">Patient orientation</string>
    <string name="language">Language and speech</string>
    <string name="visual">Visual impairment</string>
    <string name="hearing_aid">Hearing aid</string>
    <string name="hearing_assessed">Hearing assessed</string>
    <string name="aphasia">Aphasia</string>
    <string name="fall_risk">Fall risk</string>
    <string name="other">Other history</string>
    <string name="cognition">Cognition</string>
    <string name="levelOfIntervention">Level of intervention</string>
    <string name="depressed">Depressed</string>
    <string name="dateFirstOT">Date of first OT assessment</string>
    <string name="dateFirstSwallow">Date of first Swallowing assessment</string>
    <string name="dateFirstPT">Date of first PT assessment</string>
    <string name="dateFirstSLP">Date of first SLP assessment</string>
    <string name="select_date">Select</string>
    <string name="title_activity_discharge_patient_form">Discharge patient</string>
    <string name="discharge_save">Save</string>
    <string name="text_discharge">Select date of discharge</string>
    <string name="totalOT">Total OT sessions received</string>
    <string name="totalPT">Total PT sessions received</string>
    <string name="totalSLP">Total SLP sessions received</string>
    <string name="text_moca">MOCA</string>
    <string name="text_score">Score:</string>
    <string name="text_out_of">Out of:</string>
    <string name="text_custom">Custom assessment</string>
    <string name="title_activity_score_history">Score reports</string>
    <string name="text_select_score_type">Select score type:</string>
    <string name="text_total_score">Total score</string>
    <string name="text_line1">If there was no one to help you with your feeding, could you do it alone?\n(unable = 0; needs assistance = 5; fully independent = 10)</string>
    <string name="text_line2">If there was no one to help you with your personal hygiene, could you do it alone?\n(unable = 0; needs assistance = 0; fully independent = 5)</string>
    <string name="text_line3">If there was no one to help you, would you be able to bathe or shower without anyone present?\n(unable = 0; needs assistance = 0; fully independent = 5)</string>
    <string name="text_line4">If there was no one to help you, would you be able to dress yourself?\n(unable = 0; needs assistance = 5; fully independent = 10)</string>
    <string name="text_line5">If there was no one to help you, would you be able to get to the toilet on your own?\n(unable = 0; needs assistance = 5; fully independent = 10)</string>
    <string name="text_line6">Do you have any trouble with bowel incontinence?\n(complete = 0; occasional accident = 5; complete control day and night = 10)</string>
    <string name="text_line7">Do you have any trouble with bladder control?\n(complete = 0; occasional accident = 5; complete control day and night = 10)</string>
    <string name="text_line8">Can you transfer from bed to chair independently?\n(unable = 0; needs assistance = 10; fully independent = 15)</string>
    <string name="text_line9">Can you walk 50 yards without help or supervision?\n(unable = 0; needs assistance = 10; fully independent = 15)</string>
    <string name="text_line10">Can you go up and down stairs independently?\n(unable = 0; needs assistance = 5; fully independent = 10)</string>
    <string name="score_total"> </string>
    <string name="score_line1"> </string>
    <string name="score_line2"> </string>
    <string name="score_line3"> </string>
    <string name="score_line4"> </string>
    <string name="score_line5"> </string>
    <string name="score_line6"> </string>
    <string name="score_line7"> </string>
    <string name="score_line8"> </string>
    <string name="score_line9"> </string>
    <string name="score_line10"> </string>
    <string name="text_barthel">Barthel</string>
    <string name="text_berg">Berg</string>
    <string name="text_cns">CNS</string>
    <string name="text_nihss">NIHSS</string>
    <string name="title_activity_score_graphs">Score graphs</string>
    <string name="qPeg">PEG/RIG/NG tube</string>
    <string name="qNg">NG tube</string>
    <string name="qO2">O2</string>
    <string name="qIv">Venous line</string>
    <string name="qCpap">CPAP/Vent/Trach</string>
    <string name="qEvd">EVD/LD</string>
    <string name="qRestraint">Restraint</string>
    <string name="qBedbars">Bed bars</string>
    <string name="qBehavioural">Behavioural issue</string>
    <string name="qConfusion">Confusion</string>
    <string name="qBladder">Bladder</string>
    <string name="qHours">Hours out of bed</string>
    <string name="hoursHint">Enter number of hours</string>
    <string name="qSleepApnea">Sleep Apnea</string>
    <string name="qLongTermCare">Long term care declared</string>
    <string name="qFallOccurrence">Fall occurrence</string>
    <string name="qDSIE">DSIE sent</string>
    <string name="qRepatriation">Repatriation declared</string>
    <string name="qNeglect">Neglect</string>
    <string name="qDigitSpan">Digit span</string>
    <string name="qMmse">MMSE / MOCA</string>
    <string name="mmseHint">Enter score</string>
    <string name="qFollows">Follows commands</string>
    <string name="qVerbal">Verbal communication</string>
    <string name="qMotivation">Motivation</string>
    <string name="qMood">Mood</string>
    <string name="qPain">Pain</string>
    <string name="qFatigue">Fatigue</string>
    <string name="qSwallow">Swallow</string>
    <string name="qFeeding">Feeding</string>
    <string name="qDressing">Dressing</string>
    <string name="qKitchen">Kitchen</string>
    <string name="qLeftArm">Left arm movement</string>
    <string name="qRightArm">Right arm movement</string>
    <string name="qMovementBed">Movement in bed</string>
    <string name="qLieSit">Lie to Sit</string>
    <string name="qSitting">Sitting unsupported</string>
    <string name="qSitStand">Sit to stand</string>
    <string name="qStand">Stand unsupported</string>
    <string name="qLiftsUnaffected">Lifts unaffected leg standing</string>
    <string name="qLiftsAffected">Lifts affected leg standing</string>
    <string name="qWalking">Walking</string>
    <string name="qCns1">Consciousness </string>
    <string name="qCns2">Orientation</string>
    <string name="qCns3">Aphasia</string>
    <string name="qCnsA1_4">Face</string>
    <string name="qCnsA1_5">Upper Limb (proximal)</string>
    <string name="qCnsA1_6">Upper Limb (distal)</string>
    <string name="qCnsA1_7">Lower Limb (proximal)</string>
    <string name="qCnsA1_8">Lower Limb (distal)</string>
    <string name="qCnsA2_4">Face</string>
    <string name="qCnsA2_5">Upper Limbs</string>
    <string name="qCnsA2_6">Lower Limbs</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="a1">1</string>
    <string name="a2">2</string>
    <string name="a3">3</string>
    <string name="a4">4</string>
    <string name="a5">5</string>
    <string name="a6">6</string>
    <string name="a7">7</string>
    <string name="none">None</string>
    <string name="partial">Partial</string>
    <string name="full">Full</string>
    <string name="a1step">1 step</string>
    <string name="a2step">2 step</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="oriented">Oriented</string>
    <string name="disoriented">Disoriented</string>
    <string name="ischemic">Ischemic</string>
    <string name="hemorrhagic_ich">Hemorrhagic - ICH</string>
    <string name="hemorrhagic_sah">Hemorrhagic - SAH</string>
    <string name="tia">TIA</string>
    <string name="alert">Alert</string>
    <string name="drowsy">Drowsy</string>
    <string name="normal">Normal</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="otherAnswer">Other</string>
    <string name="foley">Foley</string>
    <string name="ic">I/C</string>
    <string name="diaper">Diaper</string>
    <string name="condom">Condom</string>
    <string name="bedpan">Bedpan/Urinal</string>
    <string name="toilet">Toilet</string>
    <string name="vent">Vent</string>
    <string name="trach">Trach</string>
    <string name="aCns1alert">Alert</string>
    <string name="aCns1drowsy">Drowsy</string>
    <string name="aCns2oriented">Oriented</string>
    <string name="aCns2disoriented">Disoriented</string>
    <string name="aCns3receptiveDeficit">Receptive deficit</string>
    <string name="aCns3expressiveDeficit">Expressive deficit</string>
    <string name="aCns3normal">Normal</string>
    <string name="aCnsA1_4noWeakness">No weakness</string>
    <string name="aCnsA1_4Weakness">Weakness</string>
    <string name="aCnsA1_noWeakness">No weakness</string>
    <string name="aCnsA1_mildWeakness">Mild weakness</string>
    <string name="aCnsA1_significantWeakness">Significant weakness</string>
    <string name="aCnsA1_totalWeakness">Total weakness</string>
    <string name="aCnsA2_4symmetrical">Symmetrical</string>
    <string name="aCnsA2_4asymmetrical">Asymmetrical</string>
    <string name="aCnsA2_equal">Equal</string>
    <string name="aCnsA2_unequal">Unequal</string>
    <string name="charlson">Charlson</string>
    <string name="comorbidity">Co-morbidity</string>
    <string name="rankin">Rankin</string>
    <string name="rankin_admission">Rankin (filled at admission)</string>
    <string name="cns">CNS (filled at admission)</string>
    <string name="nihss">NIHSS (estimated from CNS)</string>
    <string name="toast">TOAST</string>
    <string name="openCnsForm">Open CNS form</string>
    <string name="charlsonCancer">Cancer</string>
    <string name="charlsonLiver">Liver</string>
    <string name="charlsonDiabetes">Diabetes</string>
    <string name="charlsonCerebrovascular">Cerebrovascular</string>
    <string name="charlsonAmi">AMI</string>
    <string name="charlsonChf">CHF</string>
    <string name="charlsonPvd">PVD</string>
    <string name="charlsonDementia">Dementia</string>
</resources>