<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/patient_new" android:title="@string/patient_new" android:icon="@drawable/ic_action_add"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/patient_list" android:title="@string/patient_list" android:icon="@drawable/ic_action_database"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/data_save" android:title="@string/data_save" android:icon="@drawable/ic_action_save"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_view_history" android:title="@string/action_view_history"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/clear_all" android:title="@string/clear_all"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
