<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.physiotherapy.mcgill.patientmonitoring.ScoreGraphs">

    <TextView android:text="@string/text_select_score_type" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rgScoreTypeGraphs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_ScoreTypeGraphsBarthel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_barthel"
            android:checked="true"
            android:onClick="selectBarthel"/>
        <RadioButton android:id="@+id/radio_ScoreTypeGraphsBerg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_berg"
            android:onClick="selectBerg"/>
        <RadioButton android:id="@+id/radio_ScoreTypeGraphsCns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cns"
            android:onClick="selectCns"/>
        <RadioButton android:id="@+id/radio_ScoreTypeGraphsNihss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nihss"
            android:onClick="selectNihss"/>
    </RadioGroup>


    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/graph"/>

</LinearLayout>
