<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.physiotherapy.mcgill.patientmonitoring.NewPatientFormActivity">

        <TextView android:text="@string/first_name" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name" />

        <TextView android:text="@string/last_name" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name" />

        <TextView android:text="@string/patient_ID" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/edit_hospital_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_ID" />

        <TextView android:text="@string/select_admission_date" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_picker"
            android:layout_gravity="center_horizontal"
            android:datePickerMode="calendar"
            />



    </LinearLayout>

</ScrollView>